--- a/config.json
+++ b/config.json
@@ -5,3 +5,4 @@ Temporary commit content 23
 Temporary commit content 44
 Temporary commit content 46
 Temporary commit content 52
+Temporary commit content 53
